# repobrain

./: .env.example  .gitignore  .mcp.json  LICENSE  PROJECT.md  README.md  pyproject.toml
.claude/: launch.json
backend/: config.py  extraction.py  ingestion.py  main.py  memory.py  schemas.py
cli/: main.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
frontend/src/components/: AskPanel.tsx  DetailPanel.tsx  ForgetPanel.tsx  GraphExplorer.tsx  GraphNode.tsx  IngestPanel.tsx  Legend.tsx  OnboardingHint.tsx  QueryBar.tsx  TopBar.tsx
frontend/src/lib/: api.ts  design.ts  layout.ts
mcp_server/: hello.py  repobrain.py
tests/: test_config.py  test_extraction.py  test_ingestion.py  test_memory.py  test_multi_branch_ingest.py  test_schemas.py
