[project]
name = "repobrain"
version = "0.1.0"
description = "A memory layer for AI coding agents"
requires-python = ">=3.12"
dependencies = [
    "cognee",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pygithub",
    "google-generativeai",
    "rich",
    "mcp",
]

[project.scripts]
repobrain = "cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "cli"]
